# Automatic-Number-Plate-Recognition-System

./: README.md  requirements.txt  setup.cfg
src/: core.py
src/assets/: commands.py  data_base.py  interface.py  update_db.py
src/gui/: button_switch.py
src/pages/: page_anpr.py  page_counter.py  page_menu.py
src/resources/num_plate_db/: num_plates.db
