[metadata]
name = diagnostic_lab
version = 1.0.0
author = Mikhail Paseka
author_email = yohobayt@gmail.com
description = An application package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MikhailP39/diagnostic_lab
project_urls =
    Bug Tracker = https://github.com/MikhailP39/diagnostic_lab/issues
classifiers =
    Programming Languages :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src